2007-11-22  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/operations.cc (ip_execute_checkrm_script): New. Function to
	execute the checkrm scripts, also checking the old directory
	/var/lib/osso-application-installer, if needed (N76475).
	(ip_check_upgrade_loop): Changed to use the new defined function
	instead of directly running run_cmd (N76475).
	(up_checkrm_loop): Likewise (N76475).

2007-11-22  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/main.h (refresh_package_cache, refresh_package_cache_flow,
	updated_system_flow): Removed, they are unused now.
	(refresh_package_cache_without_user): Added state and title
	parameters.  Added keep_going parameter to continuation.  Updated
	all callers.
	(set_catalogues_and_refresh): New, for use instead of
	refresh_package_cache when new catalogues should be set.

	* src/dbus.cc (dbus_mime_open): Don't regocnize
	"magic:update-system", don't call updated_system_flow.

	* src/instr.cc (execute_card_install): Use
	set_catalogues_and_refresh instead of refresh_package_cache.
	* src/repo.cc (scdf_dialog_done, add_catalogues_cont_2): Likewise.

2007-11-21  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.cc (present_main_window): Don't take care of
	specifically showing the main vbox and the main toolbar. There's
	no need to do that and doing it so gets a bug (N76467).
	Also, dont't show the whole main vbox seems it's not necessary:
	just setting the main breadcrumb trail visible is enough.

	* src/main.h, src/main.cc (get_main_toolbar): Removed. It's not
	used anymore since changes commented above in util.cc.

2007-11-21  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/util.cc (IDLE_TIMEOUT_SECS): New, use instead of literal
	number.

	* src/main.cc (refresh_package_cache_without_user_flow): New.
	(call_refresh_package_cache): Use it.
	(maybe_refresh_package_cache_without_user): New.
	(make_install_applications_view, make_upgrade_applications_view):
	Call it.